# terra-siege

./: .gitignore  3d_assets.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  base_mode_v2.md  terra_siege_inspect_roadmap.md
assets/meshes/: base.meta.json  bomber.meta.json  carrier.meta.json  collector.meta.json  drone.meta.json  fighter.meta.json  hovercraft.meta.json  radar_booster.meta.json  repair_station.meta.json  seeder.meta.json  tank.meta.json
project-status/: game_modes_and_features.md
project-status/archive/: CLAUDE_phase2.md  CLAUDE_rebuild.md  README.md  REBUILD_ROADMAP.md  VIRUS_REMAKE_ARCHITECTURE.md  camera_system.md  combat_tuning.md  flight_mode_rebuild.md  project-roadmap.md  radar_system.md  readme_rebuild.md  terrain_rebuild.md
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp
src/core/: Clock.hpp  Config.hpp  GameState.cpp  GameState.hpp  Particles.cpp  Particles.hpp  Settings.cpp  Settings.hpp
src/entity/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  Player.cpp  Player.hpp
src/hud/: Radar.cpp  Radar.hpp
src/inspector/: AITool.cpp  AITool.hpp  FXTool.cpp  FXTool.hpp  HardpointsTool.cpp  HardpointsTool.hpp  HullTool.cpp  HullTool.hpp  IdentityTool.cpp  IdentityTool.hpp  Inspector.cpp  Inspector.hpp  InspectorConfig.cpp  InspectorConfig.hpp  InspectorFont.cpp  InspectorFont.hpp  MaterialsTool.cpp  MaterialsTool.hpp  MenuBar.cpp  MenuBar.hpp  PrimitivesTool.cpp  PrimitivesTool.hpp  ProfileTool.cpp  ProfileTool.hpp  ShieldsTool.cpp  ShieldsTool.hpp  Tool.hpp  TopologyTool.cpp  TopologyTool.hpp  VertexTool.cpp  VertexTool.hpp  WeaponsTool.cpp  WeaponsTool.hpp  main.cpp
src/mesh/: EntityProfileRegistry.cpp  EntityProfileRegistry.hpp  MeshRegistry.cpp  MeshRegistry.hpp  ObjLoader.cpp  ObjLoader.hpp  Palette.hpp  SidecarProfile.cpp  SidecarProfile.hpp
src/shield/: ShieldRenderer.cpp  ShieldRenderer.hpp
src/wave/: WaveDef.hpp  WaveManager.cpp  WaveManager.hpp
src/world/: Decorations.cpp  Decorations.hpp  Heightmap.cpp  Heightmap.hpp  Planet.cpp  Planet.hpp  TerrainChunk.cpp  TerrainChunk.hpp
terra_rebuild/: CLAUDE.md  REBUILD_ROADMAP.md  camera_system.md  combat_tuning.md  flight_mode_rebuild.md  radar_system.md  readme_rebuild.md  terrain_rebuild.md
tests/: test_obj_loader.cpp  test_obj_save.cpp  test_sidecar_profile.cpp
